Add automatic expense tracking.
Use Gemini to extract information from transaction screenshot, then create new pages for Income/Expense database.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Python
 __pycache__/
 *.py[cod]
-*$py.class
 .venv/
 .env
 
@@ -9,6 +8,8 @@ __pycache__/
 .vscode/
 .idea/
 .gemini/
+*.swp
+*.swo
 
 # OS
 .DS_Store
